# shortnames

./: README.md  inspect-images.py  pyproject.toml  shortames.conf  shortnames.conf
.github/workflows/: test_inspect.yml
